# erc8004

./: .gitignore  .gitmodules  .mcp.json  Cargo.toml  README.md  flake.nix
erc8004/: Cargo.toml
erc8004-mcp/: Cargo.toml
erc8004-mcp/src/: error.rs  main.rs  server.rs
erc8004/src/: client.rs  contracts.rs  error.rs  identity.rs  lib.rs  networks.rs  reputation.rs  types.rs  validation.rs
